force-app/main/default/objects/Subject_Progress__c/Subject_Progress__c.object-meta.xml
<CustomObject>
    <label>Subject Progress</label>
    <nameField>
        <label>Subject Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subject Progresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>