force-app/main/default/objects/Subject_Progress__c/fields/Course_Subject__c.field-meta.xml
<CustomField>
    <fullName>Course_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Subject</label>
    <referenceTo>Course_Subject__c</referenceTo>
    <relationshipLabel>Subject Progresses</relationshipLabel>
    <relationshipName>Subject_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>