force-app/main/default/objects/Subject_Progress__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Subject Progresses</relationshipLabel>
    <relationshipName>Subject_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>