force-app/main/default/objects/Subject_Progress__c/fields/Instructor_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Feedback__c</fullName>
    <label>Instructor Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>