force-app/main/default/objects/Subject_Progress__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Subject Progresses</relationshipLabel>
    <relationshipName>Subject_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>